; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_cmp_8_di.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_cmp_8_di.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i8* null, align 8
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i8* null, align 8
@FLAG_V = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_cmp_8_di() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = call i8* (...) @OPER_AY_DI_8()
  store i8* %4, i8** %1, align 8
  %5 = load i8*, i8** @DX, align 8
  %6 = call i8* @MASK_OUT_ABOVE_8(i8* %5)
  store i8* %6, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = load i8*, i8** %1, align 8
  %9 = ptrtoint i8* %7 to i64
  %10 = ptrtoint i8* %8 to i64
  %11 = sub i64 %9, %10
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %3, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @NFLAG_8(i8* %13)
  store i32 %14, i32* @FLAG_N, align 4
  %15 = load i8*, i8** %3, align 8
  %16 = call i8* @MASK_OUT_ABOVE_8(i8* %15)
  store i8* %16, i8** @FLAG_Z, align 8
  %17 = load i8*, i8** %1, align 8
  %18 = load i8*, i8** %2, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @VFLAG_SUB_8(i8* %17, i8* %18, i8* %19)
  store i32 %20, i32* @FLAG_V, align 4
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @CFLAG_8(i8* %21)
  store i32 %22, i32* @FLAG_C, align 4
  ret void
}

declare dso_local i8* @OPER_AY_DI_8(...) #1

declare dso_local i8* @MASK_OUT_ABOVE_8(i8*) #1

declare dso_local i32 @NFLAG_8(i8*) #1

declare dso_local i32 @VFLAG_SUB_8(i8*, i8*, i8*) #1

declare dso_local i32 @CFLAG_8(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
